feat: edit launchSettings.json to not launch browser (+ edit lanchUrl)

--- a/ConsumerDrivenContractTesting/DiscountSvc-Provider/DiscountSvc-Provider/Properties/launchSettings.json
+++ b/ConsumerDrivenContractTesting/DiscountSvc-Provider/DiscountSvc-Provider/Properties/launchSettings.json
@@ -12,8 +12,7 @@
     "DiscountSvc_Provider": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7282;http://localhost:5195",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
