--- a/ConsumerDrivenContractTesting/OrderSvc-Consumer/OrderSvc-Consumer/Properties/launchSettings.json
+++ b/ConsumerDrivenContractTesting/OrderSvc-Consumer/OrderSvc-Consumer/Properties/launchSettings.json
@@ -12,8 +12,7 @@
     "OrderSvc_Consumer": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7001;http://localhost:5107",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
