--- a/ConsumerDrivenContractTesting/DiscountSvc-Provider/DiscountSvc-Provider/Properties/launchSettings.json
+++ b/ConsumerDrivenContractTesting/DiscountSvc-Provider/DiscountSvc-Provider/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7282;http://localhost:5195",
+      "applicationUrl": "http://localhost:5195",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
