--- a/MessageMicroservices/ConsumerTests/ConsumerTests.csproj
+++ b/MessageMicroservices/ConsumerTests/ConsumerTests.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
@@ -20,10 +20,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PaymentMicroservice\PaymentMicroservice.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Using Include="Xunit" />
   </ItemGroup>
 
 </Project>
